[package]
name = "adb-tauri"
version = "1.0.0"
description = "ADB desktop control — Tauri + Go sidecar"
authors = ["you"]
edition = "2021"

[lib]
name = "adb_tauri_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
