[package]
name = "ssrtauri"
version = "1.0.0"
description = "SSR hello world — Tauri desktop"
authors = ["fe.tony"]
edition = "2021"

[lib]
name = "ssrtauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["clock"] }
